# revenue-integrity-control-room-prototype

./: .gitignore  Launch Hospital Charge Capture Demo.cmd  README.md  case_study.md  pyproject.toml  pytest.ini  requirements.txt
app/: streamlit_app.py
artifacts/: README.md  control_story_v0_audit.md  deferred_scope_boundary.md  denial_feedback_cdm_monitor_audit.md  project_summary_and_scope.md  proof_index.md  queue_governance_browser_audit.md  scenario_lab_v0_audit.md  success_definition_checklist.md
docs/: ARCHITECTURE_OVERVIEW.md  DATA_MODEL.md  DEPARTMENT_LOGIC_MAP.md  DOCS_RECONCILIATION_REPORT.md  KPI_DICTIONARY.md  MANUAL_AUDIT_RUBRIC.md  MANUAL_AUDIT_SAMPLE.md  OPERATING_RUNBOOK.md  README.md  REAL_WORLD_SOURCE_MAPPING_BY_DEPARTMENT.md  REPO_AUDIT_EXEC_MEMO.md  REVIEWER_EVIDENCE_PACK.md  SOURCE_SYSTEM_MAPPING_CONTRACT.md  SYNTHETIC_DATA_RULES.md  V1_VALIDATION_CHECKLIST.md  build_sot.md  recruiter_quickstart.md
scripts/: build_windows_portable.py  launch_demo_windows.ps1  launch_portable_windows.ps1  run_demo.py
tests/: browser_audit_global_filters.py  test_case_detail_payload.py  test_cli_commands.py  test_decision_pack.py  test_exception_queue_and_history.py  test_expected_charge_derivation.py  test_imports_smoke.py  test_kpis_and_priority.py  test_opportunity_action_tracker_trace.py  test_page_control_room_summary.py  test_page_denial_feedback_cdm_monitor.py  test_page_scenario_lab.py  test_pages_remaining.py  test_realism_scorecard.py  test_reference_tables_contract.py  test_synthetic_core_tables.py  test_ui_theme_shell.py  test_validation_harness.py  (+3 more)
(+129 files in other folders)
